# BrightS

./: CMakeLists.txt  CMakeLists_i386.txt  COMMAND_REFERENCE_CN.md  CONTRIBUTING.md  File_Struct_Define  Makefile  README.md  index.html
.github/workflows/: build-release.yml  build.yml  claude_review.yml  release.yml
.kilo/: AGENTS.md
arch/x86_64/: syscall_abi.c  trap.c  uefi_entry.c
build-brights/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-brights/sys/: Makefile  cmake_install.cmake
build-brights/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_btrfs_btree  test_ramfs
docs/: API.md  CHANGELOG.md  CONTRIBUTING_zh_CN.md  DEVELOPMENT.md  I386_PORTING_PLAN.md  INSTALLATION.md  OPTIMIZATION_REPORT.md  PERFORMANCE.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  README_ja.md  README_zh_CN.md  SECURITY_STATUS.md  TODO  TODO.md  build.md
docs/api-reference/: README.md
docs/design/: File_Struct_Define
docs/developer-guide/: CONTRIBUTING.md  CONTRIBUTING_ja.md  DEVELOPMENT.md  PROJECT_STRUCTURE.md  README.md  README_ja.md  README_zh_CN.md
docs/runtime/: README.md
docs/user-guide/: COMMAND_REFERENCE.md  README.md  (+3 more)
drivers/: fb.c  im.c  ps2kbd.c  serial.h  shader.h  tty.c  tty.h  tui.c  usb_core.c
kernel/: kernel_main.c  kmalloc.c  lightshell.c
scripts/: build-i386.sh  make-iso.sh  run-qemu.sh
tests/: CMakeLists.txt  test_benchmark.c  test_btrfs_btree.c  test_ramfs.c  test_sched.c  test_stubs.c
tools/: create-disk-img.py  create-efi-img.py  make-iso.sh
userspace/: test_user_i386.S
(+137 files in other folders)
